--- a/templates/default/agent.json.erb
+++ b/templates/default/agent.json.erb
@@ -10,6 +10,7 @@
     "max_stale": "3s",
     "node_ttl": "0"
   },
+  "recursors": <%= @nameservers.to_json %>
   "ui": false,
   "server": false
 }
