--- a/templates/default/agent.json.erb
+++ b/templates/default/agent.json.erb
@@ -10,6 +10,8 @@
     "max_stale": "3s",
     "node_ttl": "0"
   },
+
+  "node_meta": <%= @node_meta %>,
   "recursors": <%= @recursors.to_json %>,
   "ui": false,
   "server": false
